Add appearing effect

--- a/index.html
+++ b/index.html
@@ -31,38 +31,31 @@
               <img src="images/image1.jpg" alt="" />
               <h2>House of actors</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image2.jpg" alt="" />
               <h2>Jolene</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image3.jpg" alt="" />
               <h2>Friday Rock</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image1.jpg" alt="" />
               <h2>House of actors 2</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image2.jpg" alt="" />
               <h2>Jolene 2</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image3.jpg" alt="" />
               <h2>Friday Rock 2</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image2.jpg" alt="" />
               <h2>Jolene 3</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
-            </div>
-            <div class="slide">
+            </div><div class="slide">
               <img src="images/image3.jpg" alt="" />
               <h2>Friday Rock 3</h2>
               <p>22. nov. 2010 - 10. dec 2010</p>
