Replace setInterval with requestAnimatinFrame

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
           </div>
           <div class="controls">
-            <a href="javascript:prev();" class="prev">Previous</a>
-            <a href="javascript:next();" class="next">Next</a>
+            <a href="javascript:w_gallery.prev();" class="prev">Previous</a>
+            <a href="javascript:w_gallery.next();" class="next">Next</a>
           </div>
         </div>
       </div>
